add word coming soon

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         <div class="row vertical-content">
                             <div class="col-lg-6">
                                 <div class="home_content mt-3">
-                                    <p class="home_small_title">Come And <span class="text-custom">Join Us</span></p>
+                                    <p class="home_small_title">COMING <span class="text-custom">SOON</span></p>
                                     <h1><span class="text-custom">Dividen.id</span> will lead investor to the right investee</h1>
                                     <p class="home_small_content mt-4 text-muted">Expand your business, Earn your profit</p>
                                     <div class="pt-3">
