--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="mt-3">
-                            <img src="images/logo-light.png" alt="" class="img-fluid footer_logo">
+                            <img src="images/logo-dividen.png" alt="" class="img-fluid footer_logo">
                         </div>
 
                         <div class="mt-4">
