change to fudex

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         <!--Navbar Start-->
         <nav class="navbar custom_nav navbar-expand-lg fixed-top sticky">
             <div class="container">
-                <a class="logo navbar-brand" href="index.html">
-                    <img src="images/logo-dividen.png" alt="" class="">
+                <a class="navbar-brand" href="index.html">
+                    <img src="images/logo-fundex.png" alt="" style="height: 80px">
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="mdi mdi-menu"></i>
@@ -84,7 +84,7 @@
                             <div class="col-lg-6">
                                 <div class="home_content mt-3">
                                     <p class="home_small_title">COMING <span class="text-custom">SOON</span></p>
-                                    <h1><span class="text-custom">Dividen.id</span> will lead investor to the right investee</h1>
+                                    <h1><span class="text-custom">FundEx</span> will ensure your fund grow exponentially</h1>
                                     <p class="home_small_content mt-4 text-muted">Expand your business, Earn your profit</p>
                                     <div class="pt-3">
                                         <a href="#register" class="btn btn-gradient text-uppercase mr-2" id="started">Get Started</a> 
@@ -254,13 +254,13 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="mt-3">
-                            <img src="images/logo-dividen.png" alt="" class="img-fluid footer_logo">
+                            <img src="images/fundex2.jpeg" alt="" class="img-fluid" style="height: 80px">
                         </div>
 
                         <div class="mt-4">
-                            <p class="mb-2"><i class="mdi mdi-map-marker"></i> Depok</p>
-                            <p class="mb-2"><i class="mdi mdi-cellphone"></i> 021 6657723</p>
-                            <p class="mb-2"><i class="mdi mdi-email-outline"></i> info@dividen.id</p>
+                            <p class="mb-2"><i class="mdi mdi-map-marker"></i> Grha Aktiva</p>
+                            <p class="mb-2"><i class="mdi mdi-cellphone"></i> 021 37499348</p>
+                            <p class="mb-2"><i class="mdi mdi-email-outline"></i> info@fundex.id</p>
                             <ul class="list-inline fot_social mt-4">
                                 <li class="list-inline-item"><a href="" class="social-icon"><i class="mdi mdi-facebook"></i></a></li>
                                 <li class="list-inline-item"><a href="" class="social-icon"><i class="mdi mdi-twitter"></i></a></li>
@@ -301,7 +301,7 @@
                 <div class="row mt-5">
                     <div class="col-lg-12">
                         <div class="text-center">
-                            <p class="copy-rights mb-0">&copy; 2019 Dividen.id - All Right Reserved</p>
+                            <p class="copy-rights mb-0">&copy; 2019 FundEx - All Right Reserved</p>
                         </div>
                     </div>
                 </div>
