--- a/index.html
+++ b/index.html
@@ -193,13 +193,13 @@
                                 <div class="card">
                                     <div class="card-header" id="headingOne">
                                         <h5 class="mb-0 align-middle" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                            <i class="mdi mdi-help-box h4"></i> <span>What is DIVIDEN?</span>
+                                            <i class="mdi mdi-help-box h4"></i> <span>What is FundEx?</span>
                                         </h5>
                                     </div>
 
                                     <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
                                         <div class="card-body">
-                                            <p class="mb-0 text-muted">DIVIDEN is an ECF Platform. It will bring together the investor and investee, so they can choose to fund or to be funded</p>
+                                            <p class="mb-0 text-muted">FundEx is an ECF Platform. It will bring together the investor and investee, so they can choose to fund or to be funded</p>
                                         </div>
                                     </div>
                                 </div>
