--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
     	<meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Dividen - Empowering Growth</title>
+        <title>FundEx - Grow to Share</title>
         <meta name="description" content=""/>
         <meta name="keywords" content=""/>
         <meta name="author" content="ThemesBoss"/>
